--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
 
             // List of images (to be updated dynamically if needed)
             const galleryImages = [
-                '1.JPG',
+                '1.jpg',
                 '2.JPG',
                 '3.JPG',
             ];
