--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         }
 
         .footer p {
-            font-family: 'Dancing Script', cursive;
+            font-family: 'Dancing Script', 'Amatica SC', cursive;
             font-size: 1.5rem;
         }
 
@@ -776,25 +776,24 @@
             </div>
         </div>
     </section> 
-    <!-- <section id="rsvp" class="section">
+    <section id="rsvp" class="section">
         <div class="container">
             <h2 class="section-title">RSVP</h2>
-            <div class="google-form-container">
+            <!-- <div class="google-form-container">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJejnoXVJC5nizSS6cyhb7ufHdKVgnRYYUFq2HmeDHXUOPvg/viewform?embedded=true" 
                         frameborder="0" 
                         marginheight="0" 
                         marginwidth="0">
                     Loading…
                 </iframe>
-            </div>
+            </div> -->
                 <div style="text-align:center; margin-top:32px;">
                     <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Shachar+%26+Bes+Wedding&dates=20260527T163000Z/20260527T210000Z&details=Join+us+for+our+wedding+celebration!&location=Your+Venue+Address+Here&sf=true&output=xml" target="_blank" rel="noopener" class="add-to-calendar-btn" style="display:inline-block;padding:12px 28px;background:var(--pink);color:white;font-size:1.1em;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:background 0.2s;" title="Add to Google Calendar" aria-label="Add to Google Calendar">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
                     </a>
             </div>
         </div>
-    </section> -->
-
+    </section>
     <section id="guestbook" class="section">
         <div class="container">
             <h2 class="section-title">Guestbook</h2>
@@ -1463,6 +1462,9 @@
             timerLabels.forEach((el, i) => {
                 if (t.labels[i]) el.textContent = t.labels[i];
             });
+            document.querySelector('#timer .section-title').textContent = t.journeyTitle;
+            document.querySelector('#timer .journey-text p').textContent = t.journeyText;
+
 
             // Update guestbook section
             const guestbookSection = document.querySelector('#guestbook');
@@ -1483,8 +1485,6 @@
             document.querySelectorAll('#photos-section .coming-soon h3')[0].textContent = t.comingSoon;
             document.querySelectorAll('#photos-section .coming-soon h3')[1].textContent = t.comingSoon;
             document.querySelector('#rsvp .section-title').textContent = t.rsvpTitle;
-            document.querySelector('#timer .section-title').textContent = t.journeyTitle;
-            document.querySelector('#timer .journey-text p').textContent = t.journeyText;
             document.querySelector('.footer p').textContent = t.footer;
 
             // Update countdown labels
