--- a/index.html
+++ b/index.html
@@ -772,11 +772,16 @@
                         <h3 style="font-size: 1.8rem; margin-bottom: 10px;">💍 Ceremony</h3>
                         <div class="time" style="font-size: 1.5rem; margin-bottom: 0; color: var(--gold);">20:30</div>
                     </div>
+                    <div style="text-align:center; margin-top:32px;">
+                        <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Shachar+%26+Bes+Wedding&dates=20260527T163000Z/20260527T210000Z&details=Join+us+for+our+wedding+celebration!&location=Your+Venue+Address+Here&sf=true&output=xml" target="_blank" rel="noopener" class="add-to-calendar-btn" style="display:inline-block;padding:12px 28px;background:var(--pink);color:white;font-size:1.1em;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:background 0.2s;" title="Add to Google Calendar" aria-label="Add to Google Calendar">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section> 
-    <section id="rsvp" class="section">
+    <!-- <section id="rsvp" class="section">
         <div class="container">
             <h2 class="section-title">RSVP</h2>
             <!-- <div class="google-form-container">
@@ -787,13 +792,8 @@
                     Loading…
                 </iframe>
             </div> -->
-                <div style="text-align:center; margin-top:32px;">
-                    <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Shachar+%26+Bes+Wedding&dates=20260527T163000Z/20260527T210000Z&details=Join+us+for+our+wedding+celebration!&location=Your+Venue+Address+Here&sf=true&output=xml" target="_blank" rel="noopener" class="add-to-calendar-btn" style="display:inline-block;padding:12px 28px;background:var(--pink);color:white;font-size:1.1em;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:background 0.2s;" title="Add to Google Calendar" aria-label="Add to Google Calendar">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
-                    </a>
-            </div>
         </div>
-    </section>
+    </section> -->
     <section id="guestbook" class="section">
         <div class="container">
             <h2 class="section-title">Guestbook</h2>
@@ -1281,7 +1281,7 @@
             en: {
                 nav: [
                     { label: "Wedding Details", href: "#details" },
-                    { label: "RSVP", href: "#rsvp" },
+                   // { label: "RSVP", href: "#rsvp" },
                     { label: "Guestbook", href: "#guestbook" },
                     { label: "Photos", href: "#photos-section" },
                     { label: "Our Journey", href: "#timer" },
@@ -1334,7 +1334,7 @@
             al: {
                 nav: [
                     { label: "Detajet e Dasmës", href: "#details" },
-                    { label: "RSVP", href: "#rsvp" },
+                    //{ label: "RSVP", href: "#rsvp" },
                     { label: "Libri i Miqve", href: "#guestbook" },
                     { label: "Fotografitë", href: "#photos-section" },
                     { label: "Udhëtimi Ynë", href: "#timer" },
