fixed deleted arrow

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                 </iframe>
             </div> -->
         </div>
-    </section> -->
+    </section> 
     <section id="guestbook" class="section">
         <div class="container">
             <h2 class="section-title">Guestbook</h2>
