--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
             he: {
                 nav: [
                     { label: "פרטי החתונה", href: "#details" },
-                    { label: "אישור הגעה", href: "#rsvp" },
+                    // { label: "אישור הגעה", href: "#rsvp" },
                     { label: "ספר אורחים", href: "#guestbook" },
                     { label: "הפלייליסט שלנו", href: "#playlist" },
                     { label: "תמונות", href: "#photos-section" },
