--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
                 receptionDescription: "נפטפט, נאכל ראשונות ונצטלם",
                 ceremonyDescription: "מתחתנים",
                 party: "מסיבה",
-                partyDescription: "אוכל וחגיגה!"
+                partyDescription: "אוכל וריקודים!"
             },
 
             en: {
@@ -1403,8 +1403,8 @@
                 footer: "Me dashuri, Shachar & Bes",
                 labels: ["Vite", "Muaj", "Ditë", "Ditë gjithsej"],
                 playlistTitle: "Lista e Këngëve",
-                receptionDescription: "Kohë për të takuar miq dhe për të krijuar kujtime me foto & video",
-                ceremonyDescription: "Ceremonia tradicionale hebraike e martesës kur zyrtarisht bëhemi familje",
+                receptionDescription: "Kohë për të takuar miq dhe për të krijuar kujtime me foto & video.",
+                ceremonyDescription: "Ceremonia tradicionale hebraike e martesës kur zyrtarisht bëhemi familje.",
                 party: "Festa",
                 partyDescription: "Koha për të kërcyer dhe për të ngrënë."
             }
